--- a/Debugging/UserSection.tt
+++ b/Debugging/UserSection.tt
@@ -15,14 +15,18 @@ namespace Application0
     partial class Application0
     {
         public Controller currentController;
-       
+       public bool changed = false;
+            
         protected async Task UserSection()
         {
             currentController = <#getMainController();#>
-            
             for (; ; )
             {
                 currentController.action();
+                while (changed){
+                    changed = false;
+                    currentController.action();
+                }
                 await Wait();
             }
         }
@@ -40,5 +44,5 @@ private void getMainController()
 <#+                // <<< Notice that this is also a class feature block.  
             }
             }
-    }  
+}  
 #>
